2012-03-12  Georg-Johann Lay  <avr@gjlay.de>

	* avr51-flash1.x: New file.
	* dejagnuboards/atmega128-sim.exp (ldflags): Pass path where
	avrtest is located in -L so that custom ld script like above 
	needed by some test cases can be found.
	* dejagnuboards/atxmega128-sim.exp (ldflags): Ditto.

2012-03-07  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (rotate_right): Non-jump formulation for arithmetic.
	(avr_op_RJMP, avr_op_RCALL, avr_op_BLD): Ditto.
	(do_subtraction_8): Ditto.
	(do_multiply): Ditto.
	(branch_on_sreg_condition): Ditto.
	(avr_op_SBIW, avr_op_ADIW): Ditto.

2012-02-29  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboards/exit.c: Use GNU style.
	(init_exit_c): Define as constructor instead of .init8.

2012-02-24  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest (arch): Turn from pointer into object to reduce levels
	of indirection.
	(log_add_instr): Ditto.
	(push_PC, pop_PC): Ditto.
	(avr_op_ICALL, avr_op_RET, avr_op_CALL, avr_op_RCALL): Ditto.
	(parse_args): Ditto.
	(pop_PC, avr_op_EICALL, avr_op_EIJMP): Sanity check PC.
	(PC_VALID_MASK): New macro.
	(skip_instruction_on_condition): Use it to constrain PC.
	(branch_on_sreg_condition): Ditto.
	(avr_op_RJMP, avr_op_RCALL): Ditto.

2012-02-24  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboards/atxmega128-sim.exp (ldflags): add
	--defsym=__stack=0x1fff

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (avr_op_EICALL, avr_op_EIJMP): Use get_word_reg to read Z. 

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* README: Add note for avrtest-xmega.
	
	* avrtest.c: Add support for XMEGA.
	* avrtest.h: Ditto.
	* Makefile: Add rules to make avrtest-xmega, avrtest-xmega_log,
	and exit-atxmega128a3.o.

	* dejagnuboards/atxmega128-sim.exp: New file.

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c: More GNU coding rule fixess.

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c: Indent according to GNU coding rules.

2011-12-07  Georg-Johann Lay  <avr@gjlay.de>
